# Metabelly

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client-update.html  fly.toml  knowledge-base.md  main.py  project-update.html  pyproject.toml  requirements.txt  test_classifier.py
.github/workflows/: ci.yml
metabelly/agents/: classifier.py
metabelly/api/: app.py  security.py  webhooks.py
metabelly/core/: audit.py  config.py  database.py  db_pool.py  dispatcher.py  encryption.py  metrics.py  models.py  queue.py  queue_service.py  worker.py
metabelly/integrations/: calendly.py  gmail.py  slack.py
n8n-workflows/: 01-email-triage.json  02-slack-notify.json  03-auto-reply.json  04-daily-briefing.json  05-chat-widget.json  06-notion-orders.json  07-backfill-orders.json  07-backfill-requests.json  08-woo-backfill.json  09-build-customers.json  10-link-interactions.json
tests/: test_calendly.py  test_classifier.py  test_gmail.py  test_security.py  test_slack.py
