[project]
name = "metabelly"
version = "0.1.0"
description = "Metabelly customer triage and automation system"
requires-python = ">=3.12"
dependencies = [
    # core — needed now
    "mistralai>=2.4.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "cryptography>=42.0.0",
    # api — needed when we wire up the webhook endpoint
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "slack-sdk>=3.42.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# install when wiring up each integration, not before
slack = ["slack-sdk>=3.27.0"]
google = [
    "google-api-python-client>=2.126.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]
database = ["sqlalchemy>=2.0.0", "asyncpg>=0.29.0"]
monitoring = ["prometheus-client>=0.20.0"]

dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

# ── Ruff: linting + formatting ───────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit security checks
    "ANN", # type annotations required
]
ignore = [
    "ANN101", # self annotation not needed
    "ANN102", # cls annotation not needed
    "S101",   # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]  # relax security + annotation rules in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy: strict type checking ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "slack_sdk.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=metabelly",
    "--cov-report=term-missing",
    "--cov-fail-under=50",   # unit tests only — integration layer tested separately
    "-v",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
